--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rangelkoli.github.io/portfolio-2024/",
   "name": "portfolio-2024",
   "private": true,
   "version": "0.0.0",
