--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.2",
+    "framer-motion": "^11.3.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
